fix(store): Header is overflow in small screen

--- a/store/src/app/shared/Components/header/header.component.scss
+++ b/store/src/app/shared/Components/header/header.component.scss
@@ -13,6 +13,12 @@ embed {
   }
 }
 
+@media (max-width: 345px) {
+  embed {
+    height: 27px;
+  }
+}
+
 a {
   display: inline-block;
 }
